--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,13 +1,21 @@
 mos.config:
-  host: http://localhost:9700
-  secret-key: b-T3wXaUu5umA3vumqEIVA==
-  open-id: 5
-  bucket-name: default
+#  host: http://localhost:9700
+#  secret-key: b-T3wXaUu5umA3vumqEIVA==
+#  open-id: 5
+#  bucket-name: default
+  host: http://localhost:6001
+  secret-key: nQRgTl93PRZhxftqj0WCQw==
+  open-id: 7
+  bucket-name: mos
+
 
 cloud:
   backup-paths:
-    - srcPath: C:/Users/Administrator/Desktop/test
-      desPath: /backup/test
-  recover-paths:
-    - srcPath: /backup/test
-      desPath: C:/Users/Administrator/Desktop/test-recover
+#    - srcPath: C:/Users/Administrator/Desktop/test
+#      desPath: /backup/test
+    - srcPath: "D:/baidu/1.21风 婚礼"
+      desPath: "/婚礼/婚礼照片"
+      includes: ["**/*.jpg","**/*.png"]
+#  recover-paths:
+#    - srcPath: /backup/test
+#      desPath: C:/Users/Administrator/Desktop/test-recover
